--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ var tooltip = d3.select("body").append("div")
     .attr("class", "tooltip")
     .style("opacity", 0);
 // load data
-d3.csv("compressed_new.csv", function(error, data) {
+d3.csv("final.csv", function(error, data) {
 // d3.csv("concat.csv", function(error, data) {
   // change string (from CSV) into number format
   data.forEach(function(d) {
