Add navbar and shrink graph height
Closes #19

- move css
- fix indentation
- add navbar
- shrink graph

--- a/index.html
+++ b/index.html
@@ -1,49 +1,58 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <!-- Bootstrap Core CSS -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
 <meta charset="utf-8">
 
 <!-- Example based on http://bl.ocks.org/mbostock/3887118 -->
 <!-- Tooltip example from http://www.d3noob.org/2013/01/adding-tooltips-to-d3js-graph.html -->
 
-<style>
-body {
-  font: 11px sans-serif;
-}
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-.dot {
-  stroke: #000;
-}
-.line {
-  stroke: #bbb;
-}
-.tooltip {
-  position: absolute;
-  width: 200px;
-  height: 28px;
-  pointer-events: none;
-}
-    .container{
-        position: relative;
-    }
-    .miniGraphs{
-  
-    }
-    .svg { 
-    pointer-events: all;
-}
-    .hover-line { 
-  stroke: black;  
-
-  stroke-width: .8px;
-}
-</style>
 <body>
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">fbspy</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li class="dropdown-header">Nav header</li>
+            <li><a href="#">Separated link</a></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
+  <div class="container">
+  <br>
+  <br>
+  <br>
+  <br>
+    <div class="row">
+      <div class="col-lg-12">
+          <h1>Does Facebook Know When We Sleep?</h1>
+      </div>
+    </div>
     <div id="main"></div>
     <div class="miniGraphs"> </div> 
 
@@ -70,7 +79,7 @@ body {
 var margin = {top: 20, right: 20, bottom: 30, left: 40},
     
     width = 960 - margin.left - margin.right,
-    height = 900 - margin.top - margin.bottom;
+    height = 400 - margin.top - margin.bottom;
     
     /*width = 960 - margin.left - margin.right,
     height = 900 - margin.top - margin.bottom;*/
