--- a/index.html
+++ b/index.html
@@ -99,14 +99,15 @@ var format = d3.time.format("4/" + "%d" + " " + "%X");
    
     xValue = function(d) {return new Date(d.time1 * 1000);},
     xValue2 = function(d) {return new Date(d.time2 * 1000);},// data -> value
-    length = function(d) {
+    length =function(d) {
       if((d.time2-d.time1) < 0) {
         console.log('date error')
         console.log(d.time2-d.time1)
         console.log(d)
         console.log(new Date(d.time2 - d.time1))
       }
-      return (d.time2 - d.time1)
+      return (Math.abs(d.time2 - d.time1))
+      
 
       ;},
     //xScale = d3.scale.linear().range([0, width]), // value -> display
@@ -283,7 +284,7 @@ d3.select("#main").on("mouseover", function() {
   
   var x1Value = function(d) {return new Date(d.time1 * 1000);},
     x1Value2 = function(d) {return new Date(d.time2 * 1000);},// data -> value
-    length1 = function(d) {return new Date(d.time2 - d.time1);};
+    length1 = function(d) {return new Date(Math.abs(d.time2 - d.time1));};
   var xScale1 = d3.time.scale().range([0, width1]), // value -> display
     wScale1 = d3.scale.linear().domain([0, 120245]).range([0, width1]),
     xMap1 = function(d) { return xScale1(x1Value(d));}, // data -> display
