--- a/index.html
+++ b/index.html
@@ -869,8 +869,8 @@ d3.csv("day4.csv", function(error, data) {
       });
     });
 
-/*function zoom() {
-=======
+
+
     
   var hoverLineGroup4 = chart4.append("g")
 	.attr("class", "hover-line");
@@ -885,7 +885,7 @@ var hoverDate4=hoverLineGroup4.append('text')
 // Hide hover line by default.
 hoverLineGroup4.style("opacity", 1e-6);
    
-d3.select(".miniGraph4").on("mouseover", function() {/* do something })*/
+d3.select(".miniGraph4").on("mouseover", function() {/* do something*/ })
   .on("mousemove", function() {
   
     var mouse_x4 = d3.mouse(this)[0]-40;
@@ -909,7 +909,7 @@ function zoom() {
 
 	svg.attr("transform", "translate(" + d3.event.translate + ")scale("
 	+ d3.event.scale + ")");
-}*/
+}
 </script>
 </body>
 </html>
