Moved html from under miniGraphs

--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@ FF<!DOCTYPE html>
       </div>
     </div>
     <div id="main"></div>
-      <div id="option">
+      <div id="optionMorning">
     <input name="updateButton" 
            type="button" 
            value="Morning" 
            onclick="morning()" />
 </div>
 
-      <div id="option">
+      <div id="optionNight">
     <input name="updateButton" 
            type="button" 
            value="Night" 
            onclick="night()" />
 </div>
-      <div id="option">
+      <div id="optionPower">
     <input name="updateButton" 
            type="button" 
            value="Power" 
@@ -79,11 +79,20 @@ FF<!DOCTYPE html>
     <div class="miniGraph4"> </div> 
     <h4>Created by Ido Kinel, Alexander Roman, and Austin Provansal</h4>
     <h4>Description: Facebook user activity, graphed and analyzed</h4>
+      
+    <br><br><br><br><br><br><br><br><br><br>
+
     <h4>Files Submitted:</h4>
 
     <ul>
       <li><a href=index.html>index.html</a></li>
       <li><a href="final.csv">final.csv</a></li>
+        <li><a href="day1.csv">day1.csv</a></li>
+        <li><a href="day2.csv">day2.csv</a></li>
+        <li><a href="day3.csv">day3.csv</a></li>
+        <li><a href="day4.csv">day4.csv</a></li>
+        <li><a href="main.css">main.css</a></li>
+    
     </ul>
 
     <h4> Sources: </h4>
