More data yay so tired help

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ var tooltip = d3.select("body").append("div")
     .attr("class", "tooltip")
     .style("opacity", 0);
 // load data
-d3.csv("day1test.csv", function(error, data) {
+d3.csv("day1.csv", function(error, data) {
   // change string (from CSV) into number format
   data.forEach(function(d) {
     //d = (new Date(d));
