--- a/index.html
+++ b/index.html
@@ -27,20 +27,7 @@ FF<!DOCTYPE html>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li class="dropdown-header">Nav header</li>
-            <li><a href="#">Separated link</a></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
+        <li><a href="http://github.com/klvs/fbspy">github</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
@@ -73,15 +60,22 @@ FF<!DOCTYPE html>
   <div class="">
     <div id="main" class="">
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
+
   </div>
+      <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+<div class="row">
   <div class="miniGraph1"> </div> 
   <div class="miniGraph2"> </div> 
   <div class="miniGraph3"> </div> 
   <div class="miniGraph4"> </div> 
+</div>
   <br>
   <br>
   <br>
