--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@ FF<!DOCTYPE html>
   </div>
   <div class="row">
     <div class="col-lg-12">
+      <blockquote>
+        <p class="">Every day data privacy become a more relevant and important topic. Beyond the question of “who owns our data?” is “how can we control what we give away?” Often modern people unwittingly trade privacy for trivial rewards and features. Even the smallest of features can leak potentially sensitive data. In doing this project we hope to raise awareness about privacy.</p>
+      </blockquote>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
       <button type="button" id="onD1am" class="btn btn-success">Day 1 AM</button>
       <button type="button" id="onD1pm" class="btn btn-success">Day 1 PM</button>
       <button type="button" id="onD2am" class="btn btn-success">Day 2 AM</button>
