--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ FF<!DOCTYPE html>
   </div>
   <div class="row">
     <div class="col-lg-12">
+      <p class="lead" style="display:inline-block">Top Usage:     </p>
       <button type="button" id="onD1am" class="btn btn-success">Day 1 AM</button>
       <button type="button" id="onD1pm" class="btn btn-success">Day 1 PM</button>
       <button type="button" id="onD2am" class="btn btn-success">Day 2 AM</button>
@@ -59,7 +60,7 @@ FF<!DOCTYPE html>
       <button type="button" id="onD3pm" class="btn btn-success">Day 3 PM</button>
       <button type="button" id="onD4am" class="btn btn-success">Day 4 AM</button>
       <button type="button" id="onD4pm" class="btn btn-success">Day 4 PM</button>
-      <button type="button" id="onClear" class="btn btn-clear">Clear</button>
+      <!-- <button type="button" id="onClear" class="btn btn-clear">Clear</button> -->
       <br>
       <br>
     </div>
@@ -277,7 +278,7 @@ d3.csv("final2.csv", function(error, data) {
     })
     $('onClear').on('click', function() {
     
-        svg.selectAll('.n4t').style("fill", 'blue');
+        // svg.selectAll('.n4t').style("fill", 'blue');
     })
 
 
@@ -492,7 +493,7 @@ d3.csv("day1.csv", function(error, data) {
       .attr("y", 6)
       .attr("dy", ".71em")
       .style("text-anchor", "end")
-      .text("Person");
+      // .text("Day");
       var ll = 50;
       var rectHeight = height1/hardYRange;
     
